# ufs_pyutils

./: .pycodestyle  .readthedocs.yaml  INSTALL.md  README.md  pyproject.toml  requirements.conda  requirements.txt  setup.cfg  setup.py  test.file
.github/workflows/: buildtest.yaml  containers.yaml  pycodestyle.yaml  pypi.yaml  unittests.yaml
Docker/: el7-miniconda-ufs_pyutils.docker  el7-miniconda-ufs_pyutils.dockerfile  ubuntu20.04-miniconda-ufs_pyutils.docker  ubuntu20.04-miniconda-ufs_pyutils.dockerfile  ubuntu20.04.hello_world.dockerfile  ubuntu20.04.ufs_pyutils.dockerfile
confs/: enviro_interface.py  jinja2_interface.py  json_interface.py  lua_interface.py  namelist_interface.py  template_interface.py  yaml_interface.py
confs/tests/: test_enviro_interface.py  test_jinja2_interface.py  test_namelist_interface.py  test_template_interface.py  test_yaml_interface.py
confs/tests/test_files/: doit.sh  jinja2.check  jinja2.template  template.check  template.template
docs/source/: conf.py  confs.enviro_interface.rst  confs.jinja2_interface.rst  confs.json_interface.rst  confs.lua_interface.rst  confs.rst  confs.template_interface.rst  confs.yaml_interface.rst  execute.rst  execute.subprocess_interface.rst  index.rst  ioapps.awscli_interface.rst  ioapps.boto3_interface.rst  ioapps.curl_interface.rst  ioapps.grib_interface.rst  ioapps.hashlib_interface.rst  ioapps.netcdf4_interface.rst  ioapps.rst  ioapps.sqlite3_interface.rst  ioapps.tarfile_interface.rst  ioapps.url_interface.rst  ioapps.wget_interface.rst  ioapps.xarray_interface.rst  ioapps.xml_interface.rst  requirements.txt  tools.datetime_interface.rst  tools.fileio_interface.rst  tools.parser_interface.rst  tools.rst  tools.system_interface.rst  utils.cli_interface.rst  utils.decorator_interface.rst  utils.error_interface.rst  utils.exceptions_interface.rst  utils.logger_interface.rst  utils.rst  utils.schema_interface.rst  utils.table_interface.rst  utils.timestamp_interface.rst
execute/: subprocess_interface.py
execute/tests/: tests_container_interface.py
fsutils/: local_interface.py
ioapps/: awscli_interface.py  boto3_interface.py  curl_interface.py  globus_interface.py  grib_interface.py  hashlib_interface.py  netcdf4_interface.py  noaahpss_interface.py  sqlite3_interface.py  tarfile_interface.py  tcvitals_interface.py  url_interface.py  wget_interface.py  xarray_interface.py  xml_interface.py
ioapps/tests/: test_hashlib_interface.py  test_netcdf4_interface.py  test_tarball_interface.py  test_tcvitals_interface.py
scripts/: ufs_logger.py
tools/: datetime_interface.py  fileio_interface.py  parser_interface.py  system_interface.py
tools/tests/: test_datetime_interface.py  test_parser_interface.py  test_system_interface.py
utils/: arguments_interface.py  cli_interface.py  constants_interface.py  decorator_interface.py  error_interface.py  exceptions_interface.py  logger_interface.py  schema_interface.py  table_interface.py  timestamp_interface.py
utils/tests/: test_schema_interface.py
utils/tests/test_files/: schema.yaml
