[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ufs_pyutils"
authors = [
  {
   name = "Henry R. Winterbottom",
   email = "henry.winterbottom@noaa.gov"
  }
]
dependencies = [
    "netcdf4==1.6.2",
    "numpy==1.22.4",
    "astropy==5.2",
    "bs4==0.0.1",
    "croniter==1.3.8",
    "pyyaml==6.0",
    "boto3==1.24.28",
    "schema==0.7.5",
    "xarray==0.16.2",
    "jinja2==3.1.2",
    "lxml==4.9.2",
    "pytest==7.2.0",
    "pytest-order==1.0.1",
    "xmltodict==0.13.0",
    "tabulate==0.9.0",
    "rich_argparse==1.1.1"
    ]
