[metadata]
name = ufs_pyutils
version = 0.1.0
description = "Python Toolbox API for UFS applications."
long_description = file: INSTALL.md
long_description_content_type = text/markdown
author = "Henry R. Winterbottom"
home_page = https://github.com/HenryWinterbottom-NOAA/ufs_pyutils
license = GNU Lesser General Public License v2 (LGPLv2)
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Software Development :: Libraries :: Python Modules
  Operating System :: OS Independent
  Typing :: Typed

[options]
python_requires = >= 3.5
setup_requires = setuptools
install_requires =
  netcdf4==1.6.2
  numpy==1.22.4
  astropy==5.2
  bs4==0.0.1
  croniter==1.3.8
  pyyaml==6.0
  boto3==1.24.28
  schema==0.7.5
  xarray==0.16.2
  jinja2==3.1.2
  lxml==4.9.2
  pytest==7.2.0
  pytest-order==1.0.1
  xmltodict==0.13.0
  tabulate==0.9.0
  rich_argparse==1.1.1
  globus-cli==3.15.0
  globus-sdk==3.21.0

[options.packages.find]
where=confs,execute,ioapps,tools,utils


